First version that can actually release things with helm